cabal-version:      2.4
name:               prp
version:            0.1.0.0
extra-source-files: CHANGELOG.md

library
  exposed-modules:    PRP.Core
  default-extensions:
    NoImplicitPrelude
    BangPatterns
    BinaryLiterals
    BlockArguments
    ConstraintKinds
    DataKinds
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    HexFloatLiterals
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    NumericUnderscores
    OverloadedStrings
    QuasiQuotes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    TypeSynonymInstances
    UndecidableInstances
    ViewPatterns

  build-depends:
    , base                     ^>=4.14.3.0
    , containers
    , data-default
    , optics-core
    , pretty
    , record-dot-preprocessor
    , record-hasfield
    , safe-exceptions
    , text

  other-modules:
    PRP.Con
    PRP.Prelude

  hs-source-dirs:     src
  default-language:   Haskell2010
